# ayzim

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs  compare.sh  notes
ayzim-macros/: Cargo.toml
ayzim-macros/src/: lib.rs
ci/: before_deploy.sh  install.sh  script.sh  utils.sh
src/: cashew.rs  lib.rs  main.rs  optimizer.rs  parser.rs  static_atom_list.rs
testcases/: badroundtrip.js  couldopt.js  test_simplifyifs_difference.js
