[package]
name = "ayzim"
version = "0.1.0"
authors = ["Aidan Hobson Sayers <aidanhs@cantab.net>"]
description = "A Rust rewrite of the Emscripten asm.js optimizer"
license = "MIT/NCSA"
repository = "https://github.com/aidanhs/ayzim/"
build = "build.rs"

[dependencies]
lazy_static = "0.1.*"
odds = "0.2.11"
serde = "0.8"
serde_json = "0.8"
#string_cache = { path = "../string-cache", features = ["unstable"] }
string_cache = { git = "https://github.com/aidanhs/string-cache.git", branch = "aphs-ayzim-0.1", features = ["unstable"] }
phf = "0.7.15"
phf_builder = "0.7.15"
smallvec = "0.1.7"
libc = "0.2.11"
cfor = "1.1"
typed-arena = "1.1"
conv = "0.3.2"

interpolate_idents = "0.1.1"
#ayzim-macros = { path = "ayzim-macros" }
ayzim-macros = "0.1.0"

[build-dependencies]
#string_cache_codegen = { path = "../string-cache/string-cache-codegen" }
string_cache_codegen = { git = "https://github.com/aidanhs/string-cache.git", branch = "aphs-ayzim-0.1" }

[features]
profiling = []
